--- a/package.json
+++ b/package.json
@@ -18,18 +18,24 @@
   "author": "SEN Group",
   "license": "MIT",
   "dependencies": {
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.0.0",
     "classnames": "^2.5.1",
     "form-data": "^4.0.5",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.26",
+    "lenis": "^1.3.16",
     "next": "^14.0.0",
     "nodemailer": "^7.0.11",
     "postcss": "^8.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-intersection-observer": "^10.0.0",
+    "react-tilt": "^1.0.2",
     "tailwindcss": "^3.0.0",
     "typescript": "^5.0.0"
   },
